# mosse_tracker

./: CMakeLists.txt  README.md
src/: main.cpp  selectROI.cpp  selectROI.h  tracker.cpp  tracker.h
